<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_screen_gradient_background"
    tools:context=".ui.ProfileFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/what_is_decky"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/default_margin_medium"
        android:layout_marginTop="@dimen/default_margin_small"
        app:cardCornerRadius="@dimen/card_view_default_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sfprodisplay_bold"
            android:padding="@dimen/default_padding_xsmall"
            android:text="@string/whats_decky"
            android:textColor="@color/black" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="@dimen/logout_card_view_width"
        android:layout_height="@dimen/logout_card_view_height"
        android:layout_marginTop="@dimen/default_margin_small"
        android:layout_marginEnd="@dimen/default_margin_medium"
        android:background="@drawable/rounded_background_view_white"
        android:src="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_medium"
        android:background="@drawable/profile_photo_bg_white"
        android:paddingHorizontal="@dimen/default_padding_xxlarge"
        android:paddingVertical="@dimen/default_padding_large"
        android:src="@drawable/ic_profile_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what_is_decky"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_premium_user"
        app:layout_constraintBottom_toBottomOf="@id/profile_photo"
        app:layout_constraintEnd_toEndOf="@id/profile_photo"
        app:layout_constraintStart_toEndOf="@id/profile_photo"
        app:layout_constraintTop_toTopOf="@id/profile_photo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_xsmall"
        android:textSize="@dimen/default_text_size_large"
        android:fontFamily="@font/sfprodisplay_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_photo"
        android:text="@string/name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_small"
        android:src="@drawable/ic_edit"
        android:id="@+id/editButton"
        app:layout_constraintBottom_toBottomOf="@id/user_name"
        app:layout_constraintStart_toEndOf="@id/user_name"
        app:layout_constraintTop_toTopOf="@id/user_name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/battle_medals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_medium"
        android:src="@drawable/ic_battle_medals"
        app:layout_constraintEnd_toStartOf="@id/achievement_medals"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/achievement_medals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_achievement_medals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/battle_medals"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/number_of_battle_medals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:textSize="@dimen/default_text_size_large"
        android:fontFamily="@font/sfprodisplay_bold"
        android:textColor="@color/view_text_color_red"
        app:layout_constraintEnd_toEndOf="@id/battle_medals"
        app:layout_constraintStart_toStartOf="@id/battle_medals"
        app:layout_constraintTop_toBottomOf="@id/battle_medals"
        android:text="@string/number_of_battle_total" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size_small"
        android:fontFamily="@font/sfprodisplay_regular"
        app:layout_constraintEnd_toEndOf="@id/battle_medals"
        app:layout_constraintStart_toStartOf="@id/battle_medals"
        app:layout_constraintTop_toBottomOf="@id/number_of_battle_medals"
        android:text="@string/battle_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/number_of_achievement_medals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_small"
        android:textColor="@color/view_text_color_green"
        android:textSize="@dimen/default_text_size_large"
        android:fontFamily="@font/sfprodisplay_bold"
        app:layout_constraintEnd_toEndOf="@id/achievement_medals"
        app:layout_constraintStart_toStartOf="@id/achievement_medals"
        app:layout_constraintTop_toBottomOf="@id/achievement_medals"
        android:text="@string/number_of_battle_win" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/default_text_size_small"
        android:id="@+id/battle_text_win"
        android:fontFamily="@font/sfprodisplay_regular"
        app:layout_constraintEnd_toEndOf="@id/achievement_medals"
        app:layout_constraintStart_toStartOf="@id/achievement_medals"
        app:layout_constraintTop_toBottomOf="@id/number_of_achievement_medals"
        android:text="@string/battle_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/follow_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_xsmall"
        app:layout_constraintBottom_toTopOf="@+id/linkedin_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/number_of_achievement_medals"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/follow_us" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/linkedin_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_xsmall"
        android:src="@drawable/ic_linkedin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/instagram_login"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/follow_us" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/instagram_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_xsmall"
        android:src="@drawable/ic_instagram"
        app:layout_constraintBottom_toBottomOf="@id/linkedin_login"
        app:layout_constraintEnd_toStartOf="@id/facebook_login"
        app:layout_constraintStart_toEndOf="@id/linkedin_login"
        app:layout_constraintTop_toTopOf="@id/linkedin_login" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_xsmall"
        android:src="@drawable/ic_facebook_login"
        app:layout_constraintBottom_toBottomOf="@id/linkedin_login"
        app:layout_constraintEnd_toStartOf="@id/twitter_login"
        app:layout_constraintStart_toEndOf="@id/instagram_login"
        app:layout_constraintTop_toTopOf="@id/linkedin_login" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/twitter_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_xsmall"
        android:src="@drawable/ic_twitter"
        app:layout_constraintBottom_toBottomOf="@id/linkedin_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/facebook_login"
        app:layout_constraintTop_toTopOf="@id/linkedin_login" />


</androidx.constraintlayout.widget.ConstraintLayout>