<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/battle_screen_gradient_background"
    tools:context=".ui.BattleFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/header_card_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_header_card_view_height"
        android:layout_marginHorizontal="@dimen/default_margin_medium"
        android:layout_marginTop="@dimen/default_margin_large"
        app:cardCornerRadius="@dimen/card_view_default_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/point_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_medium"
                android:src="@drawable/ic_points"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/total_scores_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_xsmall"
                android:fontFamily="@font/sfprodisplay_bold"
                android:text="@string/total_score_number"
                app:layout_constraintBottom_toTopOf="@+id/score_text"
                app:layout_constraintStart_toEndOf="@+id/point_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfprodisplay_regular"
                android:text="@string/total_score_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/total_scores_number"
                app:layout_constraintTop_toBottomOf="@+id/total_scores_number" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin_xsmall"
                android:src="@drawable/ic_level"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/level_text"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/level_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_xxsmall"
                android:fontFamily="@font/sfprodisplay_bold"
                android:text="@string/level_number"
                android:textSize="@dimen/default_text_size_xsmall"
                app:layout_constraintBottom_toTopOf="@+id/level_progress_indicator"
                app:layout_constraintStart_toStartOf="@id/level_progress_indicator"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/level_progress_indicator"
                android:layout_width="@dimen/default_level_progress_indicator_width"
                android:layout_height="@dimen/default_level_progress_indicator_height"
                android:layout_marginEnd="@dimen/default_margin_medium"
                app:indicatorColor="#FF6C81"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/level_text"
                app:trackCornerRadius="@dimen/linear_progress_indicator_radius" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/two_player_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_xsmall"
        android:layout_marginTop="@dimen/default_margin_medium"
        android:src="@drawable/ic_two_players"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_card_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/two_player_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_medium"
        android:fontFamily="@font/sfprodisplay_bold"
        android:text="@string/two_players"
        android:textColor="@color/view_text_color_red"
        android:textSize="@dimen/default_text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two_player_img" />

    <androidx.cardview.widget.CardView
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_card_view_height"
        android:layout_marginTop="@dimen/default_margin_small"
        android:layout_marginEnd="@dimen/default_margin_medium"
        app:cardBackgroundColor="@color/view_text_color_red"
        app:cardCornerRadius="@dimen/card_view_default_radius"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two_player_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfprodisplay_medium"
                android:text="@string/play_now"
                android:textColor="@color/white"
                android:textSize="@dimen/default_text_size_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_small"
                android:layout_marginEnd="@dimen/default_margin_xsmall"
                android:src="@drawable/ic_right_arrow_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/one_player_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_xsmall"
        android:src="@drawable/ic_one_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/one_player_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_medium"
        android:fontFamily="@font/sfprodisplay_bold"
        android:text="@string/one_player"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size_large"
        app:layout_constraintBottom_toBottomOf="@id/one_player_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/one_player_img" />

    <androidx.cardview.widget.CardView
        android:id="@+id/start_button_one_player"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_card_view_height"
        android:layout_marginTop="@dimen/default_margin_xsmall"
        android:layout_marginEnd="@dimen/default_margin_medium"
        app:cardCornerRadius="@dimen/card_view_default_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_player_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/one_player_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfprodisplay_medium"
                android:text="@string/play_now"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_small"
                android:layout_marginEnd="@dimen/default_margin_xsmall"
                android:src="@drawable/ic_right_arrow_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/one_player_btn"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>